--- a/configs/rlppo.yaml
+++ b/configs/rlppo.yaml
@@ -15,30 +15,37 @@ env:
   transaction_cost_bps: 0        # keep for backwrads compatability (unused when cost_model.enabled=true)
   include_cash: true
   cash_rate_annual: 0.02         # simple annualized cash rate (optional)
+  normalize_obs_weights: true    # Better learning stability
+  
+  # Profitability-focused reward shaping
+  reward_return_bonus: 1.5       # Bonus for positive returns (encourages profitability)
+  reward_compound_bonus: 0.03    # Bonus for portfolio growth
+  reward_vol_scaling: false      # Disable aggressive vol scaling (preserve returns)
+  reward_sharpe_bonus: 0.005     # Small Sharpe bonus
 
 reward:
   return_weight: 1.0
-  turnover_penalty: 0.0          # increase later (e.g., 1e-3) if we want to curb churn
+  turnover_penalty: 0.0002       # Small penalty to reduce excessive trading
   drawdown_penalty: 0.0          # optional, depends on our env design
   volatility_penalty: 0.0
 
 ppo:
-  learning_rate: 0.0003
+  learning_rate: 0.0002         # Slightly lower for stability
   gamma: 0.99
   gae_lambda: 0.95
-  n_steps: 2048
-  batch_size: 256
+  n_steps: 4096                  # More steps per update (better learning)
+  batch_size: 512                 # Larger batches
   clip_range: 0.2
-  ent_coef: 0.0001
-  policy_hidden_sizes: [128, 128]
+  ent_coef: 0.005                # Higher exploration
+  policy_hidden_sizes: [256, 256, 128]  # Deeper network
 
 hpo:
   train_timesteps: 300000
 
 train:
-  total_timesteps: 500000
-  checkpoint_freq: 50000
-  eval_freq: 20000
+  total_timesteps: 2000000       # 2M steps for better learning
+  checkpoint_freq: 100000
+  eval_freq: 50000
 
 cost_model:
   enabled: true
@@ -47,5 +54,5 @@ cost_model:
   spread:
     type: "vol20"                 # "fixed" | "vol20"
     fixed_bps: 2.0                # used only if type == "fixed"
-    k_vol_to_bps: 8000.0          # bps per 1.0 daily vol; e.g., vol=0.01 -> ~80 bps
+    k_vol_to_bps: 4000.0          # Reduced costs during training (was 8000.0)
     vol_col_suffix: "_s20"        # feature column suffix for 20d rolling std of returns per asset (e.g., AAPL_s20)
